--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<!DOCTYPE html><html><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet">    <link rel="SHORTCUT ICON" href="img/icons/logo-ico.svg" type="image/svg">    <title>Organic</title>    <link rel="stylesheet" href="css/style.min.css"></head><body>           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    <script src="js/libs.min.js"></script>    <script src="js/main.js"></script></body></html>
+<!DOCTYPE html><html><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet">    <link rel="SHORTCUT ICON" href="img/icons/logo-ico.svg" type="image/svg">    <title>Organic</title>    <link rel="stylesheet" href="css/style.min.css"></head><body data-name-page="home">    <header class="header top">
+    <div class="header__container container">
+        <div class="header__body flex-body">
+            <div class="header__body--logo header__logo">
+                <div class="header__logo--body">
+                    <a href="/" class="header__logo--link">
+                        <picture>
+                            <source srcset="img/icons/logo.svg" media="(min-width:1024px)">
+                            <source srcset="img/icons/logo-min.svg" media="(max-width:1024px)">
+                            <img src="img/icons/logo-min.svg" alt="" class="header__logo--img">
+                        </picture>
+                    </a>
+                </div>
+            </div>
+            <div class="header__body--nav">
+                <nav class="header__nav nav">
+                    <button class="header__nav--burger nav__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                    <div class="header__nav--body nav__body">
+                        <ul class="header__nav--list nav__list">
+                            <li><a href="#" data-name-page="home" class="header__nav--link nav__link">Главная</a></li>
+                            <li><a href="#" data-name-page="product" class="header__nav--link nav__link">Продукция</a></li>
+                            <li><a href="#" data-name-page="blog" class="header__nav--link nav__link">Блог</a></li>
+                            <li><a href="#" data-name-page="about-us" class="header__nav--link nav__link">О нас</a></li>
+                            <li><a href="#" data-name-page="contact" class="header__nav--link nav__link nav__link-btn">Контакты</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>    <div class="wrapper">        <section class="start">            <div class="start__container container">                <div class="start__body flex-body">                    <div class="start__body--info start__info">                        <div class="start__info--body">                            <h2 class="start__info--subtitle title">                                Healthy life with                            </h2>                            <h1 class="start__info--title main-title">                                Nature Organic                            </h1>                            <div class="start__info--text">                                <p>Vegetables are the edible parts of a plant                                     that is used in cooking or can be eaten now.</p>                            </div>                            <div class="start__info--btn">                                <a href="#" class="btn">                                    Узнать больше                                </a>                            </div>                        </div>                    </div>                </div>            </div>            <div class="start__image">                <div class="start__image--body">                    <div class="start__image--elem">                        <picture><source srcset="img/bg-elements/flowers.svg" type="image/webp"><img src="img/bg-elements/flowers.svg" loading="lazy" alt=""></picture>                    </div>                    <div class="start__image--elem">                        <!-- <div class="start__image--elem-bg">                                                    </div> -->                        <div class="start__image--elem-bg" style="background-image: url(img/icons/logo-min.svg);"></div>                    </div>                    <div class="start__image--elem">                        <picture><source srcset="img/bg-elements/leaves.svg" type="image/webp"><img src="img/bg-elements/leaves.svg" loading="lazy" alt=""></picture>                    </div>                </div>            </div>        </section>        <div style="width: 100%; height: 2000px;"></div>    </div>       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    <script src="js/libs.min.js"></script>    <script src="js/main.js"></script></body></html>
