--- a/contacts.html
+++ b/contacts.html
@@ -46,8 +46,7 @@
                     </a>
                 </div>
                 <div class="footer__info--text text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit, sed do eiusmod tempor </p>
+                    <p>Сегодня люди не представляют свою жизнь без современных технологий, в частности, без компьютера.</p>
                 </div>
                 <h3 class="footer__info--copy footer-subtitle">
                     © Copyright 2020 Nature
@@ -94,7 +93,7 @@
             </nav>
             <div class="footer__body--follow footer__follow">
                 <h3 class="footer__follow--title footer-subtitle">
-                    Follow Us
+                    Подписывайтесь на нас
                 </h3>
                 <ul class="footer__follow--list">
                     <li>
