--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;800&display=swap" rel="stylesheet">    <link rel="SHORTCUT ICON" href="img/icons/logo-ico.svg" type="image/svg">    <title>Organic</title>    <link rel="stylesheet" href="css/style.min.css"></head><!-- v1.0.2 --><body data-name-page="home">    <header class="header top">
+<!DOCTYPE html><html lang="ru"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;800&display=swap" rel="stylesheet">    <link rel="SHORTCUT ICON" href="img/icons/logo-ico.svg" type="image/svg">    <title>Organic</title>    <link rel="stylesheet" href="css/style.min.css"></head><!-- v1.0.21 --><body data-name-page="home">    <header class="header top">
     <div class="header__container container">
         <div class="header__body flex-body">
             <div class="header__body--logo header__logo">
